# pio-cpp-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: CompilerOptions.cmake  DoctestIntegration.cmake  InsourceGuard.cmake  TargetOSSetup.cmake  VcpkgIntegration.cmake  doctestAddTests.cmake
example/: CMakeLists.txt
example/src/: main.cpp
pio-exe/: CMakeLists.txt
pio-exe/src/: main.cpp  mymath.cpp
pio-exe/test/: main.cpp
pio-lib/: CMakeLists.txt
pio-lib/include/: mymath.hpp
pio-lib/src/: mymath.cpp
pio-lib/test/: main.cpp
pio_math/: CMakeLists.txt
pio_math/include/pio_math/: pio_math.hpp
pio_math/src/: pio_math.cpp
pio_math/src/arithmetics/: counter.cpp  counter.hpp
pio_math/src/common/: common.cpp  common.hpp
script/: build.sh  clean.sh  config.sh  dev.sh  run.sh
test/: CMakeLists.txt
test/src/: t_add.cpp
